--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -21,7 +21,7 @@ console.log("maison", maison);
         <h2 class="card-title">{maison.nomMaison}</h2>
         <p>{maison.adresse}</p>
         <div class="card-actions justify-end">
-            <button class="btn btn-primary">Plus d'info</button>
+            <button class="btn btn-primary">Plus d'infos</button>
         </div>
     </div>
 </div>
