--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -22,6 +22,7 @@ console.log("maison", maison);
         <p>{maison.adresse}</p>
         <div class="card-actions justify-end">
             <button class="btn btn-primary">Andrea Mestre</button>
+            <p>andrea mestre test</p>
         </div>
     </div>
 </div>
